# jml-engine-gl3

./: .gitignore  CMakeLists.txt  README.md  documentation.md
cmake/: CppLint.cmake  FindASSIMP.cmake  FindCurl.cmake  FindDUKTAPE.cmake  FindEasyProfiler.cmake  FindFontStash.cmake  FindGL3W.cmake  FindGLM.cmake  FindIMGUI.cmake  FindIMGUI_SDL.cmake  FindJSON.cmake  FindOgg.cmake  FindOptionParser.cmake  FindROCKET.cmake  FindRTMIDI.cmake  FindSDL2.cmake  FindSDL2_MIXER.cmake  FindSTB.cmake  FindTHEORAPLAY.cmake  FindTheora.cmake  FindTinyxml2.cmake  FindVorbis.cmake  GlslLint.cmake  JsLint.cmake
src/main/: EnginePlayer.cpp  EnginePlayer.h  Settings.cpp  Settings.h  main.cpp  version.h  version.h.in
src/main/audio/: Audio.h  AudioFile.cpp  AudioFile.h  AudioFileOgg.cpp  AudioFileOgg.h  AudioSdl.cpp  AudioSdl.h  AudioSdlMixer.cpp  AudioSdlMixer.h  OggDecoder.cpp  Playlist.cpp  Playlist.h
src/main/graphics/: Camera.cpp  Camera.h  Fbo.cpp  Fbo.h  FboOpenGl.cpp  FboOpenGl.h  Font.cpp  Font.h  FontFontStash.cpp  FontFontStash.h  Graphics.h  GraphicsOpenGl.cpp  GraphicsOpenGl.h  Image.cpp  Image.h  ImageStb.cpp  ImageStb.h  Light.cpp  Light.h  LightManager.cpp  LightManager.h  Shader.cpp  Shader.h  ShaderOpenGl.cpp  ShaderOpenGl.h  ShaderProgram.cpp  ShaderProgram.h  ShaderProgramOpenGl.cpp  ShaderProgramOpenGl.h  ShaderVariable.cpp  ShaderVariable.h  ShaderVariableOpenGl.cpp  ShaderVariableOpenGl.h  Shadow.cpp  Shadow.h  Text.cpp  Text.h  Texture.cpp  Texture.h  TextureOpenGl.cpp  (+7 more)
src/main/graphics/model/: Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  ModelAssimp.cpp  ModelAssimp.h  TexturedQuad.cpp  TexturedQuad.h
src/main/graphics/video/: VideoFile.cpp  VideoFile.h  VideoFileTheora.cpp  VideoFileTheora.h
src/main/io/: Curl.cpp  Curl.h  EmbeddedResource.cpp  EmbeddedResource.h  EmbeddedResourceManager.cpp  EmbeddedResourceManager.h  EmbeddedResources.h  File.cpp  File.h  FileRefreshManager.cpp  FileRefreshManager.h  LibraryLoader.cpp  LibraryLoader.h  ManagedMemoryObject.cpp  ManagedMemoryObject.h  MemoryManager.cpp  MemoryManager.h  MidiController.cpp  MidiController.h  MidiControllerRtMidi.cpp  MidiControllerRtMidi.h  MidiManager.cpp  MidiManager.h  NetworkManager.cpp  NetworkManager.h  Socket.cpp  Socket.h
src/main/logger/: logger.cpp  logger.h
src/main/math/: MathUtils.h  TransformationMatrix.h  TransformationMatrixGlm.cpp  TransformationMatrixGlm.h
src/main/player/: Audio.js  Camera.js  Core.js  Effect.js  Fbo.js  Graphics.js  Image.js  Input.js  Light.js  Loader.js  Menu.js  Mesh.js  Model.js  Player.js  Scene.js  Settings.js  Shader.js  Socket.js  Sync.js  Text.js  Utils.js  Video.js  polyfill.js
src/main/script/: Script.cpp  Script.h  ScriptDuktape.cpp  ScriptDuktape.h  ScriptEngine.h  ScriptEngineDuktape.cpp  ScriptEngineDuktape.h  dukwebgl.h
src/main/sync/: Sync.cpp  Sync.h  SyncRocket.cpp  SyncRocket.h
src/main/time/: Date.cpp  Date.h  Fps.cpp  Fps.h  SystemTime.cpp  SystemTime.h  TimeFormatter.cpp  TimeFormatter.h  Timer.cpp  Timer.h
src/main/ui/: Gui.h  GuiSdl.cpp  GuiSdl.h  Input.cpp  Input.h  InputSdl.cpp  InputSdl.h  Window.cpp  Window.h  WindowSdl.cpp  WindowSdl.h
src/main/ui/menu/: Menu.cpp  Menu.h  MenuImGui.cpp  MenuImGui.h  MenuSdl.h
